# MAD1-Project-iitm-bs

./: LICENSE  README.md  app.py  data.db  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
static/css/: css.css
templates/: 11das.html  12ind.html  13usr.html  14buk.html  15cat.html  1buk.html  2hom.html  3cat.html  4srh.html  5usp.html  6vew.html  ad.html  adm.html  admd.html  admh.html  adms.html  basehtml.html  documents.txt  error.html  html2.html  inf.html  infd.html  infh.html  infs.html  liblog.html  librbase.html  login.html  mainhtml.html  new.html  register.html  spn.html  spnd.html  spnh.html  spns.html  userbase.html  view.html
